feat: 新增配方书系统，支持recipe_id配置，优化配方创建/编辑消息
- 新增配方书系统 (/craftorithm recipebook)

- 配方ID和配方文件名字解耦
  - create命令格式修改为：/craftorithm create <recipe_type> [recipe_id] [recipe_file_name]
  - 各种配方创建、编辑GUI适配此修改

- 配方创建/编辑消息优化

- RecipeManager新增方法
  - getRecipesByType()获取指定类型配方
  - getAllRecipeTypes()获取所有配方类型（按typeId排序）
  - getRecipeCreateTime()获取配方创建时间
  - recipeFileNameToKeyMap/recipeKeyToFileNameMap双向映射

- CraftorithmAPI新增
  - getRecipeFileNameByKey()通过Key查找文件名
  - getRecipeKeyByFileName()通过文件名查找Key